--- a/views/index.hbs
+++ b/views/index.hbs
@@ -62,7 +62,7 @@
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Type here to add..."  aria-label="" aria-describedby="basic-addon2" id="val-id">
               <div class="input-group-append">
-                <button class="btn btn-outline-warning" type="button" onclick="Add()">Button</button>
+                <button class="btn btn-outline-warning" type="button" onclick="Add()">ADD</button>
               </div>
             </div> 
           </div>
